--- a/src/modules/abyss_skin/skin/window.less
+++ b/src/modules/abyss_skin/skin/window.less
@@ -28,7 +28,7 @@ button
 
 minimap
 {
-    background-color: @main-border-color;
+    border-left: 1px solid @main-border-color !important;
 }
 
 page :not(toolbarbutton):not(toolbaritem),
